# Assignment_of_SE213

./: README.md
Web GUI Testing/: pom.xml
Web GUI Testing/src/main/java/: demo.java  infoChangeTest.java  jaccount.java  main.java  mainTest.java  testAdvancedSearch.java  testCookie.java  testCreateTopic.java  testInfoChange.java  utils.java
White-Box Testing/: .gitignore  CMakeLists.txt  calculator-cli-test.cpp  calculator-cli.cpp
White-Box Testing/src/: calculator-cli.cpp  calculator-cli.hpp  main.cpp
White-Box Testing/test/: CMakeLists.txt
White-Box Testing/test/src/: test_calculator-cli.cpp  test_main.cpp
